--- a/src/react-tooltip.scss
+++ b/src/react-tooltip.scss
@@ -1,20 +1,32 @@
 .react-tooltip-container {
-	position: relative;
-	& > .tooltip-container {
-		display: none;
-		width: 120px;
-		background-color: black;
-		color: #fff;
-		text-align: center;
-		border-radius: 6px;
-		padding: 5px;
-		position: absolute;
-		z-index: 1;
-		transform: translate(-50%, -100%);
-		left: 50%;
-		top: -5px;
-	}
-	& > .text-container:hover + .tooltip-container {
-		display: block;
-	}
+  position: relative;
+  width: 100%;
+
+  & > .text-container {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: inline-block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  & > .tooltip-container {
+    display: none;
+    width: auto;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+  & > .text-container:hover + .tooltip-container {
+    display: block;
+  }
 }
